samples/_failures_safe/1761366952_c94f7f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae72fc99.c: In function ‘main’:
./samples/SAFE/__tmp_ae72fc99.c:164:46: error: expected ‘)’ at end of input
  164 |     printf("Compression ratio: %.2f\n", ratio
      |           ~                                  ^
      |                                              )
./samples/SAFE/__tmp_ae72fc99.c:164:5: error: expected declaration or statement at end of input
  164 |     printf("Compression ratio: %.2f\n", ratio
      |     ^~~~~~
